# meta_scaler

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  env.py  guidelines.txt  inference.py  openenv.yaml  pyproject.toml  requirements.txt  run.sh  server.py
frontend/: .dockerignore  Dockerfile  next.config.mjs
frontend/app/dashboard/: page.tsx
frontend/components/: AgentChat.tsx  AnimatedQueue.tsx  ExplanationPanel.tsx  PatientCard.tsx  QueueReorder.tsx
frontend/lib/: api.ts  names.ts
server/: app.py  env.py  server.py
